package com.example.finito.core.presentation.util

object TestTags {
    const val HOME_SCREEN = "HOME_SCREEN"

    const val LABEL_FILTERS = "LABEL_FILTERS"
    const val LABEL_FILTER_ITEM = "LABEL_FILTER_ITEM"
    const val REMOVE_FILTERS_CHIP = "REMOVE_FILTERS_CHIP"
    const val LABEL_SCREEN = "LABEL_SCREEN"
    const val RENAME_LABEL_DIALOG = "RENAME_LABEL_DIALOG"
    const val CREATE_LABEL_DIALOG = "CREATE_LABEL_DIALOG"

    const val DRAWER_LABEL_ITEM = "DRAWER_LABEL_ITEM"

    const val DELETE_DIALOG = "DELETE_DIALOG"
    const val DIALOG_CONFIRM_BUTTON = "DIALOG_CONFIRM_BUTTON"
    const val SNACKBAR = "SNACKBAR"
    const val SORTING_CHIP = "SORTING_CHIP"

    const val MENU_OPTION = "MENU_OPTION"
    const val MENU_BUTTON = "MENU_BUTTON"

    const val CARD_MENU = "CARD_MENU"
    const val CARD_MENU_BUTTON = "CARD_MENU_BUTTON"
    const val TOGGLE_LAYOUT_BUTTON = "TOGGLE_LAYOUT_BUTTON"

    const val BOARDS_GRID = "BOARDS_GRID"
    const val BOARDS_LIST = "BOARDS_LIST"
    const val BOARD_CARD = "BOARD_CARD"

    const val RENAME_TEXT_FIELD = "RENAME_TEXT_FIELD"
    const val SEARCH_TEXT_FIELD = "SEARCH_TEXT_FIELD"
    const val NAME_TEXT_FIELD = "NAME_TEXT_FIELD"

    const val DRAWER_BUTTON = "DRAWER_BUTTON"
}