...
    <string name="urgent">Urgent</string>
    <string name="boards">Boards</string>
    <string name="labels">Labels</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="create_new_board">Create new board</string>
    <string name="create_new_label">Create new label</string>
    <string name="remove_filters">Remove filters</string>
    <string name="filter_by_label">Filter by labels</string>
    <string name="sort_by">Sort by</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="newest">Newest</string>
...
