...
                type = NavType.StringType
                defaultValue = BoardState.ACTIVE.name
            }
        )
    )

    object SearchBoards : Screen(route = "search_boards")

    object CreateBoard : Screen(route = "create_board")

    object EditBoard : Screen(
        route = "edit_board/{$BOARD_ID_ARGUMENT}" +
                "?$BOARD_STATE_ARGUMENT={$BOARD_STATE_ARGUMENT}",
...
